--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,10 @@ inputs:
     description: 'if true package will be automatically published'
     required: false
     default: "true"
+  silent-update:
+    description: 'if true, ITEM_NOT_UPDATABLE will exit silently'
+    required: false
+    default: "false
   publish-target:
     required: false
     description: 'target of publish (`default` or `trustedTesters`)'
